Contact Page intial

--- a/about.html
+++ b/about.html
@@ -9,6 +9,9 @@
     <!-- Stylesheets go here! -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cookie&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lateef&display=swap">
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
     <link rel="stylesheet" href="css/styles.css" />
 
     <title>Amanda's Pastry Shop</title>
@@ -18,6 +21,9 @@
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row row-content align-items-center">
+                <div class="col-4 col-sm-3 col-md-2 align-self-center">
+                    <i class="fa fa-birthday-cake fa-5x"></i>
+                </div>
                 <div class="col">
                     <h1>Amanda's Pastry Shop</h1>
                     <h2>Treats that make you smile!</h2>
@@ -69,13 +75,13 @@
                 </div>
                 <div class="col-6 col-sm-5">
                     <h5>Social</h5>
-                    <a href="http://instagram.com/">Instagram</a>
-                    <a href="http://facebook.com/">Facebook</a>
-                    <a href="http://twitter.com/">Twitter</a>
+                    <a href="http://instagram.com/"><i class="fa fa-instagram fa-3x"></i></a>
+                    <a href="http://facebook.com/"><i class="fa fa-facebook fa-3x"></i></a>
+                    <a href="http://twitter.com/"><i class="fa fa-twitter fa-3x"></i></a>
                 </div>
                 <div class="col-sm-4">
-                    Tel: 555-555-5555<br />
-                    Email: amanda@amandaspastryshop.com
+                    <i class="fa fa-phone fa-lg"></i>Tel: 555-555-5555<br />
+                    <i class="fa fa-envelope fa-lg"></i>Email: amanda@amandaspastryshop.com
                 </div>
             </div>
         </div>
