--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,9 @@
     <!-- Stylesheets go here! -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cookie&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lateef&display=swap">
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
     <link rel="stylesheet" href="css/styles.css" />
 
     <title>Amanda's Pastry Shop</title>
@@ -18,6 +21,9 @@
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row row-content align-items-center">
+                <div class="col-4 col-sm-3 col-md-2 align-self-center">
+                    <i class="fa fa-birthday-cake fa-5x"></i>
+                </div>
                 <div class="col">
                     <h1>Amanda's Pastry Shop</h1>
                     <h2>Treats that make you smile!</h2>
@@ -50,9 +56,82 @@
         <!--Calendar with event dates-->
     </div>
 
-    <div>
-        <!--Contact button with popup form with js-->
+<div class="row row-content">
+    <div class="col-12">
+        <h2>Sign up for our Newsletter and get a Free Birthday cookie!</h2>
+        <hr />
     </div>
+    <div class="col-md-10">
+        <form>
+            <div class="form-group row">
+                <label for="firstName" class="col-md-2 col-form-label">First Name</label>
+                <div class="col-md-10">
+                    <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name" />
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="lastName" class="col-md-2 col-form-label">Last Name</label>
+                <div class="col-md-10">
+                    <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name" />
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="areaCode" class="col-md-2 col-form-label">Phone Number</label>
+                <div class="col-md-10">
+                    <input type="tel" class="form-control" name="telNum" placeholder="Phone number" />
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="email" class="col-md-2 col-form-label">Email</label>
+                <div class="col-md-10">
+                    <input type="text" class="form-control" name="email" placeholder="Email" />
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="email" class="col-md-2 col-form-label">Birthday</label>
+                <div class="col-md-3">
+                    <input type="date" class="form-control" name="email" placeholder="Email" />
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col offset-md-2">
+                    Would you like to sign up for our newsletter?
+                    <div class="form-check form-check-inline">
+                        <input type="radio" class="form-check-input" id="contactYes" name="contactRadios" value="yes" />
+                        <label for="contactYes" class="form-check-label">Yes</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input type="radio" class="form-check-input" id="contactNo" name="contactRadios" value="no" />
+                        <label for="contactNo" class="form-check-label">No</label>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="offset-md-2 col-md-10">
+                    <button type="submit" class="btn btn-lg btn-outline-danger">Submit</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+
+<div class="row row-content align-items-center">
+    <div class="col-sm-4">
+        <h2>Our Address</h2>
+        <br />
+        </div>
+        <address class="col col-12">
+            1234 Cookie Ln<br />
+            Baltimore, MD 21244<br />
+        </address>
+    </div>
+    <div class="col">
+        <a role="button" class="btn btn-link" href="tel:+12035551234"><i class="fa fa-phone"></i> 555-555-5555</a><br>
+        <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o"></i>
+            amanda@amandaspastryshop.com</a>
+    </div>
+</div>
+
 
     <footer>
         <div class="container">
@@ -68,13 +147,13 @@
                 </div>
                 <div class="col-6 col-sm-5">
                     <h5>Social</h5>
-                    <a href="http://instagram.com/">Instagram</a>
-                    <a href="http://facebook.com/">Facebook</a>
-                    <a href="http://twitter.com/">Twitter</a>
+                    <a href="http://instagram.com/"><i class="fa fa-instagram fa-3x"></i></a>
+                    <a href="http://facebook.com/"><i class="fa fa-facebook fa-3x"></i></a>
+                    <a href="http://twitter.com/"><i class="fa fa-twitter fa-3x"></i></a>
                 </div>
                 <div class="col-sm-4">
-                    Tel: 555-555-5555<br />
-                    Email: amanda@amandaspastryshop.com
+                    <i class="fa fa-phone fa-lg"></i> 555-555-5555<br />
+                    <i class="fa fa-envelope fa-lg"></i> amanda@amandaspastryshop.com
                 </div>
             </div>
         </div>
