--- a/contact.html
+++ b/contact.html
@@ -48,15 +48,55 @@
     </div>
 </nav>
 
-    <div>
-        <!--Pastry Carousel Here-->
-    </div>
+<div>
+    <!--Pastry Carousel Here-->
+</div>
+<!--
+<div class="col-md-4 col-xl-2 mt-4">
+    <a class="btn btn-info btn-lg text-nowrap" type="button" id="cateringButton">Book us for Catering</a>
+</div>
 
-    <div>
-        <!--Calendar with event dates-->
+<div id="cateringModal" class="modal fade" role="dialog">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title">Book us for Catering</h3>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div class="container-fluid">
+                    <form>
+                        <div class="form-group row">
+                            <label for="caterDate" class="col-sm-6 col-form-label">Date</label>
+                            <div class="col col-form-label">
+                                <input class="form-control" type="date" id="caterDate" name="caterDate" placeholder="">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-sm-6 col-form-label">How many guests?</label>
+                            <div class="col-2 btn-group btn-group-toggle" data-toggle="buttons">
+                                <label class="btn btn-light active">
+                                    <input type="radio" name="siteType" id="lessThan15" autocomplete="off" checked>Less than 15
+                                </label>
+                                <label class="btn btn-secondary">
+                                    <input type="radio" name="siteType" id="moreThan15" autocomplete="off" checked>15 or more
+                                </label>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col col-form-label">
+                                <button type="reset" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-primary">Submit</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
+</div> -->
 
-<div class="row row-content">
+<div class="row row-content align-items-center mx-auto">
     <div class="col-12">
         <h2>Sign up for our Newsletter and get a Free Birthday cookie!</h2>
         <hr />
@@ -76,21 +116,21 @@
                 </div>
             </div>
             <div class="form-group row">
-                <label for="areaCode" class="col-md-2 col-form-label">Phone Number</label>
+                <label for="phone" class="col-md-2 col-form-label">Phone Number</label>
                 <div class="col-md-10">
-                    <input type="tel" class="form-control" name="telNum" placeholder="Phone number" />
+                    <input type="text" class="form-control" id="phone" name="phone" placeholder="Phone number" />
                 </div>
             </div>
             <div class="form-group row">
                 <label for="email" class="col-md-2 col-form-label">Email</label>
                 <div class="col-md-10">
-                    <input type="text" class="form-control" name="email" placeholder="Email" />
+                    <input type="text" class="form-control" id="email" name="email" placeholder="Email" />
                 </div>
             </div>
             <div class="form-group row">
-                <label for="email" class="col-md-2 col-form-label">Birthday</label>
+                <label for="birthday" class="col-md-2 col-form-label">Birthday</label>
                 <div class="col-md-3">
-                    <input type="date" class="form-control" name="email" placeholder="Email" />
+                    <input type="date" class="form-control" id="birthday" name="birthday" placeholder="" />
                 </div>
             </div>
             <div class="form-group row">
@@ -115,7 +155,7 @@
     </div>
 </div>
 
-<div class="row row-content align-items-center">
+<div class="row row-content align-items-center mx-auto">
     <div class="col-sm-4">
         <h2>Our Address</h2>
         <br />
@@ -125,7 +165,30 @@
             Baltimore, MD 21244<br />
         </address>
     </div>
-    <div class="col">
+    <div class="col-sm-6">
+        <div class="card">
+            <h3 class="card-header text-white">Hours of Operation</h3>
+            <div class="card-body">
+                <dl class="row">
+                    <dt class="col-6">Monday</dt>
+                    <dd class="col-6">8AM - 2PM</dd>
+                    <dt class="col-6">Tuesday</dt>
+                    <dd class="col-6">CLOSED</dd>
+                    <dt class="col-6">Wednesday</dt>
+                    <dd class="col-6">8AM - 2PM</dd>
+                    <dt class="col-6">Thursday</dt>
+                    <dd class="col-6">8AM - 2PM</dd>
+                    <dt class="col-6">Friday</dt>
+                    <dd class="col-6">8AM - 2PM</dd>
+                    <dt class="col-6">Saturday</dt>
+                    <dd class="col-6">8AM - 2PM</dd>
+                    <dt class="col-6">Sunday</dt>
+                    <dd class="col-6">8AM - 2PM</dd>
+                </dl>
+            </div>
+        </div>
+    </div>
+    <div class="col-12">
         <a role="button" class="btn btn-link" href="tel:+12035551234"><i class="fa fa-phone"></i> 555-555-5555</a><br>
         <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o"></i>
             amanda@amandaspastryshop.com</a>
