--- a/menu.html
+++ b/menu.html
@@ -53,10 +53,128 @@
         <!--Pastry Carousel Here-->
     </div>
 
-    <div>
-        <!--Accordion Menu for Breakfast and Lunch and maybe drinks?-->
-        <!--Enable online ordering!-->
+    <div class="row row-content mx-auto">
+        <div class="col-sm-9">
+            <h2>Pastries</h2>
+            <div class="table-responsive">
+                <table class="table table-striped">
+                    <thead>
+                        <tr class="bg-danger text-light">
+                            <th>Available at any time</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody class="table-danger">
+                        <tr>
+                            <th>Chocolate Chip Cookie</th>
+                            <td>2.49</td>
+                        </tr>
+                        <tr>
+                            <th>Sugar Cookie</th>
+                            <td>2.49</td>
+                        </tr>
+                        <tr>
+                            <th>Brownie</th>
+                            <td>2.99</td>
+                        </tr>
+                        <tr>
+                            <th>Macarons</th>
+                            <td>2.99</td>
+                        </tr>
+                        <tr>
+                            <th>Apple Pie</th>
+                            <td>5.99</td>
+                        </tr>
+                        <tr>
+                            <th>Chocolate Cake</th>
+                            <td>8.99</td>
+                        </tr>
+                        <tr>
+                            <th>Cheesecake</th>
+                            <td>8.99</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
+
+    <div class="row row-content mx-auto">
+        <div class="col-sm-9">
+            <h2>Breakfast</h2>
+            <div class="table-responsive">
+                <table class="table table-striped">
+                    <thead>
+                        <tr class="bg-danger text-light">
+                            <th>Served from 8AM - 11AM</th>
+                            <th>All breakfasts served with hash browns</th>
+                        </tr>
+                    </thead>
+                    <tbody class="table-danger">
+                        <tr>
+                            <th>Pancakes</th>
+                            <td>5.99</td>
+                        </tr>
+                        <tr>
+                            <th>Waffles</th>
+                            <td>5.99</td>
+                        </tr>
+                        <tr>
+                            <th>French Toast</th>
+                            <td>6.99</td>
+                        </tr>
+                        <tr>
+                            <th>Bacon and Eggs</th>
+                            <td>4.99</td>
+                        </tr>
+                        <tr>
+                            <th>Coffee</th>
+                            <td>1.49</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
+    <div class="row row-content mx-auto">
+            <div class="col-sm-9">
+            	<h2>Lunch</h2>
+            	<div class="table-responsive">
+               	    <table class="table table-striped">
+	                    <thead>
+	                        <tr class="bg-danger text-light">
+	                            <th>Served from 11AM-2PM</th>
+                                <th>All lunches served with french fries</th>
+	                        </tr>
+                    	</thead>
+	                    <tbody class="table-danger">
+                            <tr>
+                                <th>Ham and Cheese Sandwich</th>
+                                <td>5.99</td>
+                            </tr>
+                            <tr>
+                                <th>Turkey Panini</th>
+                                <td>6.99</td>
+
+                            </tr>
+                            <tr>
+                                <th>Grilled Cheese</th>
+                                <td>4.99</td>
+                            </tr>
+                            <tr>
+                                <th>Hummus Wrap</th>
+                                <td>4.99</td>
+                            </tr>
+                            <tr>
+                                <th>Soup of the Day</th>
+                                <td>2.99</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>                
+            </div>
+       </div> 
 
     <div>
         <!--Birthday entry thing-->
