--- a/contact.html
+++ b/contact.html
@@ -165,29 +165,50 @@
             Baltimore, MD 21244<br />
         </address>
     </div>
-    <div class="col-sm-6">
-        <div class="card">
-            <h3 class="card-header text-white">Hours of Operation</h3>
-            <div class="card-body">
-                <dl class="row">
-                    <dt class="col-6">Monday</dt>
-                    <dd class="col-6">8AM - 2PM</dd>
-                    <dt class="col-6">Tuesday</dt>
-                    <dd class="col-6">CLOSED</dd>
-                    <dt class="col-6">Wednesday</dt>
-                    <dd class="col-6">8AM - 2PM</dd>
-                    <dt class="col-6">Thursday</dt>
-                    <dd class="col-6">8AM - 2PM</dd>
-                    <dt class="col-6">Friday</dt>
-                    <dd class="col-6">8AM - 2PM</dd>
-                    <dt class="col-6">Saturday</dt>
-                    <dd class="col-6">8AM - 2PM</dd>
-                    <dt class="col-6">Sunday</dt>
-                    <dd class="col-6">8AM - 2PM</dd>
-                </dl>
+        <div class="row row-content mx-auto">
+            <div class="col-sm-9">
+                <div class="table-responsive">
+                    <table class="table table-striped">
+                        <thead>
+                            <tr class="bg-danger text-light">
+                                <th>Hours of Operation</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody class="table-danger">
+                            <tr>
+                                <th>Monday</th>
+                                <td>8AM - 2PM</td>
+                            </tr>
+                            <tr>
+                                <th>Tuesday</th>
+                                <td>CLOSED</td>
+                            </tr>
+                            <tr>
+                                <th>Wednesday</th>
+                                <td>8AM - 2PM</td>
+                            </tr>
+                            <tr>
+                                <th>Thursday</th>
+                                <td>8AM - 2PM</td>
+                            </tr>
+                            <tr>
+                                <th>Friday</th>
+                                <td>8AM - 2PM</td>
+                            </tr>
+                            <tr>
+                                <th>Saturday</th>
+                                <td>8AM - 2PM</td>
+                            </tr>
+                            <tr>
+                                <th>Sunday</th>
+                                <td>8AM - 2PM</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
-    </div>
     <div class="col-12">
         <a role="button" class="btn btn-link" href="tel:+12035551234"><i class="fa fa-phone"></i> 555-555-5555</a><br>
         <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o"></i>
