--- a/about.html
+++ b/about.html
@@ -50,7 +50,36 @@
 
 
     <div>
-        <!--Mission Statement-->
+        <h1>About Us</h1>
+            <p>We here at Amanda's Pastry Shop aim to provide delicious baked goods to the community. We offer breakfast and lunch alongside our delicious pastries. We also offer catering for events. Please contact us to inquire about booking for catering.</p>
+        <h1>Customer Testimonials</h1>
+            <div class="col">
+                <div class="card bg-light mt-3">
+                    <blockquote class="blockquote card-body">
+                        <p class="mb-0">Amanda's Pastry Shop has the best chocolate chip cookies! I can't get enough of them!</p>
+                        <footer class="blockquote-footer">John Doe
+                        </footer>
+                    </blockquote>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card bg-light mt-3">
+                    <blockquote class="blockquote card-body">
+                        <p class="mb-0">I always get the hummus wrap with a brownie. You can't beat it!</p>
+                        <footer class="blockquote-footer">Luke Skywalker
+                        </footer>
+                    </blockquote>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card bg-light mt-3">
+                    <blockquote class="blockquote card-body">
+                        <p class="mb-0">All I ever want for my birthday is the cheesecake. There's none better!</p>
+                        <footer class="blockquote-footer">Harry Potter
+                        </footer>
+                    </blockquote>
+                </div>
+            </div>
     </div>
 
     <div>
@@ -80,8 +109,8 @@
                     <a href="http://twitter.com/"><i class="fa fa-twitter fa-3x"></i></a>
                 </div>
                 <div class="col-sm-4">
-                    <i class="fa fa-phone fa-lg"></i>Tel: 555-555-5555<br />
-                    <i class="fa fa-envelope fa-lg"></i>Email: amanda@amandaspastryshop.com
+                    <i class="fa fa-phone fa-lg"></i> 555-555-5555<br />
+                    <i class="fa fa-envelope fa-lg"></i> amanda@amandaspastryshop.com
                 </div>
             </div>
         </div>
